--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 http:
-  port: ':8081'
+  port: 8081
   host: 'localhost'
-  read_timeout: '30s'
-  read_timeout: '15s'
-  write_timeout: '60s'
+  read_timeout: '10s'
+  idle_timeout: '60s'
+  write_timeout: '30s'
 
 env: 'development'
 
